--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "echarts": "^5.6.0",
     "element-plus": "^2.3.8",
     "pinia": "^2.1.4",
